# py_bitcask

./: .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: bitcask.md  hint.md  index.md  keyrec.md
src/py_bitcask/: __init__.py  bitcask.py
tests/: test_bitcask.py
